
Version 1.5? (in progress)
--------------------------

**Backwards incompatible changes**

- clean: The list of ``ALLOWED_PROTOCOLS`` now defaults to http, https and
  mailto. Previously it was a long list of protocols something like ed2k, ftp,
  http, https, irc, mailto, news, gopher, nntp, telnet, webcal, xmpp, callto,
  feed, urn, aim, rsync, tag, ssh, sftp, rtsp, afs, data. #149

**Changes**

- clean: Added ``protocols`` to arguments list to let you override the list of
  allowed protocols. Thank you, Andreas Malecki! #149


Version 1.4.3 (May 23rd, 2016)
------------------------------

**Changes**

- Limit to html5lib >=0.999<0.99999999 because of impending change to
  sanitizer api. #195


Version 1.4.2 (September 11, 2015)
----------------------------------

**Changes**

- linkify: Fix hang in linkify with parse_email=True. #124
- linkify: Fix crash in linkify when removing a link that is a first-child. #136
- Updated TLDs.
- linkify: Don't remove exterior brackets when linkifying. #146


Version 1.4.1 (December 15, 2014)
---------------------------------

**Changes**

- Consistent order of attributes in output.
- Python 3.4 support.


Version 1.4 (January 12, 2014)
------------------------------

**Changes**

- linkify: Update linkify to use etree type Treewalker instead of simpletree.
- Updated html5lib to version >= 0.999.
- Update all code to be compatible with Python 3 and 2 using six.
- Switch to Apache License.


Version 1.3
-----------

- Used by Python 3-only fork.


Version 1.2.2 (May 18, 2013)
----------------------------

- Pin html5lib to version 0.95 for now due to major API break.

Version 1.2.1 (February 19, 2013)
---------------------------------

- clean() no longer considers "feed:" an acceptable protocol due to
  inconsistencies in browser behavior.


Version 1.2 (January 28, 2013)
------------------------------

- linkify() has changed considerably. Many keyword arguments have been