@@ -4,7 +4,6 @@ cache:
   directories:
   - "~/.cache/pip"
 python:
-- "2.6"
 - "2.7"
 - "3.2"
 - "3.3"
