@@ -2,12 +2,6 @@
 
 from __future__ import unicode_literals
 import logging
-try:  # Python 2.7+
-    from logging import NullHandler
-except ImportError:
-    class NullHandler(logging.Handler):
-        def emit(self, record):
-            pass
 import re
 
 import html5lib
@@ -22,7 +16,7 @@ from .version import __version__, VERSION # flake8: noqa
 __all__ = ['clean', 'linkify']
 
 log = logging.getLogger(__name__)
-log.addHandler(NullHandler())
+log.addHandler(logging.NullHandler())
 
 ALLOWED_TAGS = [
     'a',
