@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py26, py27, py32, py33, py34, py35, pypy
+envlist = py27, py32, py33, py34, py35, pypy
 
 [testenv]
 commands = nosetests {posargs:-v}
